group 'com.frostwire'
version '1.0.0'

apply plugin: 'java'
apply from: "${rootDir}/dependencies.gradle"

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.frostwire:jlibtorrent:1.2.0.18'

    testImplementation 'junit:junit:4.12'
}
